Main svc final tests and fixes (#28)
* feat: add unit-tests

* feat: small changes after unit-testing

* feat: add integration tests

* fix: fixes after integration tests